# circle-of-trust

./: .gitignore  README.md  package.json  pyproject.toml  start.sh
.github/: copilot-instructions.md
.github/workflows/: cd-production.yml  ci-pipeline.yml  rollback.yml
backend/: __init__.py  config.py  council.py  database.py  group_chat.py  main.py  models.py  monitoring.py  ollama_client.py  persona_generator.py  storage.py
backend/tests/: test_council.py  test_format_compliance.py  test_group_chat.py  test_integration.py
data/: council_config.json
docker/: backend.Dockerfile  frontend.Dockerfile  frontend.conf  nginx.conf
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.integration.test.js  api.js  setupTests.js
frontend/src/components/: ChatInterface.jsx  ChatInterface.test.jsx  CouncilSetup.css  CouncilSetup.jsx  GroupChats.css  GroupChats.jsx  MonitoringDashboard.css  MonitoringDashboard.jsx  NewGroupChatModal.css  NewGroupChatModal.jsx  Sidebar.css  Sidebar.jsx
prompts/: andrej_karpathy.md  elon_musk.md  jensen_huang.md  mark_zuckerberg.md  steve_jobs.md
terraform/environments/dev/: main.tf
terraform/environments/production/: main.tf
terraform/environments/staging/: main.tf  terraform.tfvars
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
tests/: test_api_config.py  test_group_chat_api.py  test_group_chat_storage.py  test_persona_generator.py  test_storage_db.py
